--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,8 @@ html, body {
    font-family: 'Roboto', sans-serif;
     ;
   }
+
+[contentEditable=true]:empty:before {
+    content: attr(placeholder);
+    opacity: 0.6;
+  }
