--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,22 @@ html, body {
     content: attr(placeholder);
     opacity: 0.6;
   }
+
+
+  .PopoverContent {
+    border-radius: 4px;
+    padding: 20px;
+    width: 180px;
+    background-color: #313235;
+    color: white;
+    box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+    animation-duration: 400ms;
+    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    will-change: transform, opacity;
+    z-index: 100;
+  }
+  
+  .PopoverArrow {
+    fill: white;
+  }
+  
