--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,8 @@ html, body {
 
 
   .PopoverContent {
-    border-radius: 4px;
-    padding: 20px;
     width: 180px;
     background-color: #313235;
-    color: white;
     box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
     animation-duration: 400ms;
     animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
@@ -31,3 +28,14 @@ html, body {
     fill: white;
   }
   
+.CheckboxRoot {
+  background-color: #313235;
+  border: 1px solid;
+  border-color: white;
+  width: 14px;
+  height: 14px;
+  border-radius: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
