--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,16 @@ html, body {
     will-change: transform, opacity;
     z-index: 100;
   }
+
+  .PopoverColors {
+    width: auto;
+    background-color: #313235;
+    box-shadow: hsl(206 22% 7% / 35%) 0px 10px 38px -10px, hsl(206 22% 7% / 20%) 0px 10px 20px -15px;
+    animation-duration: 400ms;
+    animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+    will-change: transform, opacity;
+    z-index: 100;
+  }
   
   .PopoverArrow {
     fill: white;
